# Lanzrath_2025

./: README.md  pyproject.toml  run_all_studies.py
figures/figure_10/: velocity_summary.csv
figures/figure_11/: velocity_summary.csv
figures/figure_12/: velocity_summary.csv
methods/: buehler_model.py  halfmax_intercept.py  halfmax_logistic.py  halfmax_spline.py  intercept.py  intercept_ransac.py  mckay.py  numerics.py
studies/01_illustrative_examples/: fig2_decay_correction.py  fig5_spatial_temporal_distribution.py  fig7_transport_types.py
studies/02_artificial_data_studies/: fig3_data_driven_methods.py  fig8_transport_velocity_analysis_in_silico.py  fig9_intercept_offset_study.py
studies/03_plant_data_studies/: Barley.csv  Phaseolus.csv  Tomato.csv  fig10_transport_velocity_analysis_tomato.py  fig11_transport_velocity_analysis_barley.py  fig12_transport_velocity_analysis_phaseolus.py
studies/03_plant_data_studies/figures/figure_11/: velocity_summary.csv
tools/: analysis.py  config.py  dataimport.py  fit.py  models.py  preprocessing.py  reporting.py  simulation.py  utils.py
